force-app/main/default/objects/Question__c/fields/Answer_C__c.field-meta.xml
<CustomField>
    <fullName>Answer_C__c</fullName>
    <label>Answer C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>