force-app/main/default/objects/Question__c/fields/Answers__c.field-meta.xml
<CustomField>
    <fullName>Answers__c</fullName>
    <label>Answers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Another placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>