force-app/main/default/objects/Question__c/fields/Do_Not_Score__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Score</label>
    <type>Checkbox</type>
</CustomField>