force-app/main/default/objects/Question__c/fields/Is_Scored__c.field-meta.xml
<CustomField>
    <fullName>Is_Scored__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Scored</label>
    <type>Checkbox</type>
</CustomField>