force-app/main/default/objects/Question__c/fields/Score_Weight__c.field-meta.xml
<CustomField>
    <fullName>Score_Weight__c</fullName>
    <formula>+0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>