force-app/main/default/objects/Question__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Another placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>